--- a/sample.html
+++ b/sample.html
@@ -1,142 +1,39 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<div class="box-body row">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-  <div id="subPersonAddressUI" class="tab-pane fade in active">
-    <div>
-      <html xmlns="http://www.w3.org/1999/xhtml">
-      <div>
-        <html xmlns="http://www.w3.org/1999/xhtml">
+<div class="box box-info myChildTab">
+  <div class="box-header with-border">
+    <h3 class="box-title">Create Requisition</h3>
+  </div>
 
-        <div class="box box-primary">
-          <div class="box-header with-border">
-            <h3 class="box-title">Address</h3>
-          </div>
-          <!-- /.box-header -->
-          <div class="box-body subRecord" submodule="PersonAddressUI">
-            <span>
-              <strong>Education</strong>
-              <a href="#" class="pull-right btn-box-tool"><i class="fa fa-trash-o"></i> Delete</a>
-              <a href="#" class="pull-right btn-box-tool"><i class="fa fa-plus"></i> New</a>
-            </span>
-            <p class="text-muted">
-              B.S. in Computer Science from the University of Tennessee at Knoxville
-            </p>
-            <hr>
-          </div>
-          <!-- /.box-body -->
-        </div>
-
-        <table class="display displayTab" style="width:100%" submodule="PersonAddressUI"
-          columns="addressType,wholeAddress,city,country" childFieldId="PersonAddressId">
-          <thead>
-            <tr>
-              <th><button data-toggle="modal" type="button" class="btn btn-info btnChildTabNew" module="CustomerUI"
-                  submodule="PersonAddressUI" data-target="#myModalPersonAddressUI">New Record</button></th>
-              <th>Type</th>
-              <th>Address</th>
-              <th>City</th>
-              <th>Country</th>
-            </tr>
-          </thead>
-        </table>
+  <div class="box-body displayTabHtmlArrange" style="height:400px; overflow-y: auto; margin:5px;">
+    <div class="form-group">
+      <label for="requisitionTitle" class="control-label">Title</label>
+      <input type="text" class="form-control displayEdit" name="requisitionTitle" placeholder="Title" module="HrRequisitionUI" mainmodule="HrRequisitionUI">
+    </div>
+    <div class="form-group">
+      <label for="recruiterCode" class="control-label" name="recruiterCode" title="Click for help" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="recruiterCode">Recruiter</label>
+      <div class="input-group">
+        <input type="text" class="form-control autocomplete displayEdit" placeholder="Recruiter" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="recruiterCode" helptitle="Recruiter">
+        <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
       </div>
-      <div>
-        <html xmlns="http://www.w3.org/1999/xhtml">
-        <!-- Button trigger modal -->
-        <!--<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" th:attr="data-target=${'#myModal' + CODEMODEL.entity}">-->
-        <!--Launch demo modal-->
-        <!--</button>-->
-
-        <!-- Modal -->
-        <div class="modal fade" id="myModalPersonAddressUI" tabindex="-1" role="dialog"
-          aria-labelledby="myModalPersonAddressUI">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <form role="form-horizontal" module="CustomerUI" submodule="PersonAddressUI">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                      aria-hidden="true">&times;</span></button>
-                  <h3 class="modal-title" id="myModalLabel">Address</h3>
-                </div>
-                <div class="modal-body">
-                  <div class="box-body" style="max-height: 500px; overflow-y: auto;">
-                    <!-- /.box-body -->
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="addressType" class="col-sm-3 control-label">Address Type</label>
-                      <div class="col-sm-9">
-                        <select type="text" class="form-control displayEdit" name="addressType"
-                          placeholder="Address Type" module="Person" submodule="PersonAddress">
-                          <option>Billing</option>
-                          <option>Shipping</option>
-                          <option>Other</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="streetNo" class="col-sm-3 control-label">Street No</label>
-                      <div class="col-sm-9">
-                        <input type="text" class="form-control displayEdit" name="streetNo" placeholder="Street No"
-                          module="CustomerUI" submodule="PersonAddressUI">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="street" class="col-sm-3 control-label">Street</label>
-                      <div class="col-sm-9">
-                        <input type="text" class="form-control displayEdit" name="street" placeholder="Street"
-                          module="CustomerUI" submodule="PersonAddressUI">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="district" class="col-sm-3 control-label">District</label>
-                      <div class="col-sm-9">
-                        <input type="text" class="form-control displayEdit" name="district" placeholder="District"
-                          module="CustomerUI" submodule="PersonAddressUI">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="country" class="col-sm-3 control-label">Country</label>
-                      <div class="col-sm-9">
-                        <input type="text" class="form-control displayEdit" name="country" placeholder="Country"
-                          module="CustomerUI" submodule="PersonAddressUI">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="city" class="col-sm-3 control-label">City</label>
-                      <div class="col-sm-9">
-                        <input type="text" class="form-control displayEdit" name="city" placeholder="City"
-                          module="CustomerUI" submodule="PersonAddressUI">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <html xmlns="http://www.w3.org/1999/xhtml">
-                      <label for="zipCode" class="col-sm-3 control-label">Zip Code</label>
-                      <div class="col-sm-9">
-                        <input type="text" class="form-control displayEdit" name="zipCode" placeholder="Zip Code"
-                          module="CustomerUI" submodule="PersonAddressUI">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="modal-footer">
-                  <span>
-                    <input type="hidden" class="form-control" name="PersonAddressId" style="width:50px;"
-                      module="CustomerUI" submodule="PersonAddressUI"></input>
-                    <button type="button" class="btn btn-default btnChildTabCancel" data-dismiss="modal"
-                      module="CustomerUI" submodule="PersonAddressUI">Cancel</button>
-                    <button type="button" class="btn btn-primary btnChildTabSave" module="CustomerUI"
-                      submodule="PersonAddressUI">Save Changes</button>
-                  </span>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
+      <input class="form-control HiddenAutoComplete" name="recruiterCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autonamefield="recruiterCode" value="">
+      <div name="recruiterCode" class="DivAutoCompleteDefault" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="recruiterCode"></div>
+      <div name="recruiterCode" class="DivAutoComplete" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="recruiterCode">HR, HR</div>
+    </div>
+    <div class="form-group">
+      <label for="managerCode" class="control-label" name="managerCode" title="Click for help" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="managerCode">Manager</label>
+      <div class="input-group">
+        <input type="text" class="form-control autocomplete displayEdit" placeholder="Manager" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="managerCode" helptitle="Manager">
+        <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
+      </div>
+      <input class="form-control HiddenAutoComplete" name="managerCode" type="hidden" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autonamefield="managerCode" value="">
+      <div name="managerCode" class="DivAutoCompleteDefault" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="managerCode"></div>
+      <div name="managerCode" class="DivAutoComplete" style="margin-left: 20px; display:none" module="HrRequisitionUI" mainmodule="HrRequisitionUI" autoname="managerCode">Tirrell, Osbourne</div>
+    </div>
+    <div class="form-group">
+      <label for="numberOfOpening" class="control-label"># Of Opening</label>
+      <div class="input-group">
+        <input type="number" name="numberOfOpening" min="0" step="1" data-number-to-fixed="0" data-number-stepfactor="100" class="form-control displayEdit" module="HrRequisitionUI" mainmodule="HrRequisition">
       </div>
     </div>
   </div>
