--- a/mobile/school.html
+++ b/mobile/school.html
@@ -40,6 +40,8 @@
     <script src="../bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <!-- datepicker -->
     <script src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+        integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
 
     <script src="../js/mainObj.js"></script>
     <script src="../js/utils.js"></script>
@@ -112,6 +114,94 @@
                 </div>
             </div>
         </div>
+
+        <div id="meetingScreen" style="display: flex; flex-direction: column; margin-bottom: 40px;">
+            <div class="box box-success">
+                <div class="box-body" style="background: black;">
+                    <video id="myVideo" class="miniVideoStream pull-right"
+                        style="min-height: 70px; max-height: 70px; margin: 5px;" autoplay playsinline
+                        muted="muted"></video>
+                    <video id="activeVideo" style="width: 100%; height: 700px;" autoplay playsinline></video>
+
+                    <div style="display: flex; flex: 1;">
+                        <div style="flex: 5;">
+                            <div style="position: absolute; bottom: 41px; left: 10px;" class="row">
+                                <div class="col-md-1">
+                                </div>
+                                <div class="col-md-1" style="margin-left: 100px;">
+                                    <video id="screenVideo" class="miniVideoStream"
+                                        style="min-height: 100px; max-height: 100px; margin-bottom: 5px;" autoplay
+                                        playsinline muted="muted"></video>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="popBox"
+                        style="position: absolute; bottom: 0; right: 20px; margin-top: 15px; display: flex; flex-direction: column;">
+                        <div style="display: flex;">
+                            <div style="display: flex; flex-direction: column; flex-wrap: wrap; overflow-y: auto; margin-top: 10px;"
+                                class="videoBoxList"></div>
+                            <div class="box box-success" id="myChatBox"
+                                style="width: 300px; margin-left: 10px; display: none;">
+                                <div class="box-header ui-sortable-handle" style="cursor: move;">
+                                    <i class="fa fa-comments-o"></i>
+
+                                    <h3 class="box-title">Chat</h3>
+                                </div>
+                                <div class="box-body chat" id="chat-box"
+                                    style="overflow-y: auto; width: auto; height: 250px; display: flex; flex-direction: column;">
+                                </div>
+                                <!-- /.chat -->
+                                <div class="box-footer">
+                                    <div style="display: flex; flex-direction: column;">
+                                        <div style="flex: 1; display: flex;">
+                                            <div style="flex: 1;">
+                                                <label style="margin-top: 5px;">Send&nbsp;To:&nbsp;</label>
+                                            </div>
+                                            <div style="flex: 5;">
+                                                <select id="sendChatMessageTo" style="margin-bottom: 5px;"
+                                                    class="selectChatTo form-control"></select>
+                                            </div>
+                                        </div>
+                                        <div class="input-group" style="flex: 1;">
+                                            <input id="txtChatMessage" class="form-control"
+                                                placeholder="Type message...">
+
+                                            <div class="input-group-btn">
+                                                <button id="btnSendChatMessage" type="button" class="btn btn-success"><i
+                                                        class="fa fa-plus"></i></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box-footer" style="background: black; height: 57px;">
+                    <div class="text-center">
+                        <a class="btn btn-social-icon btn-bitbucket btnShareVideo" title="Video"><i
+                                class="glyphicon glyphicon-facetime-video"></i></a>
+                        <a class="btn btn-social-icon btn-bitbucket btnUnShareVideo" title="Stop Video"><i
+                                class="glyphicon glyphicon-facetime-video icon-slashed"
+                                style="background: black;"></i></a>
+                        <a class="btn btn-social-icon btn-dropbox btnShareAudio" title="Audio"><i
+                                class="fa fa-fw fa-microphone"></i></a>
+                        <a class="btn btn-social-icon btn-dropbox btnUnShareAudio" title="Mute"><i
+                                class="fa fa-fw fa-microphone icon-slashed" style="background: black;"></i></a>
+                        <a class="btn btn-social-icon btn-dropbox btnToggleChat" title="Chat"
+                            style="z-index: 100000; margin-left: 100px;"><i class="fa fa-fw fa-wechat"></i></a>
+                        <a class="btn btn-social-icon btn-dropbox btnToggleOtherUsers" title="Other Users"
+                            style="z-index: 100001; margin-left: 10px;"><i class="fa fa-fw fa-users"></i></a>
+                    </div>
+                    <div id="errorMsg" style="flex: 1; height: 35px;"></div>
+                </div>
+            </div>
+
+
+        </div>
+
         <div id="activitiesList">
             <div class="box box-danger">
                 <div class="box-header with-border">
@@ -150,6 +240,12 @@
     <script src="js/mobileLogin.js"></script>
     <script src="js/schoolMobile.js"></script>
 
+    <script src="js/videoconf/mobileSocketioMediaStream.js"></script>
+    <script src="js/videoconf/mobileSocketioMeetingRoom.js"></script>
+    <script src="js/videoconf/mobileSocketioMessageHandler.js"></script>
+    <script src="js/videoconf/mobileSocketioP2P.js"></script>
+    <script src="js/videoconf/mobileSocketioQuickCall.js"></script>
+    <script src="js/videoconf/mobileSocketioScreenShare.js"></script>
     <script>
         $(function () {
             schoolMobile.loadDisplay();
