--- a/mobile/schoolAccount.html
+++ b/mobile/schoolAccount.html
@@ -51,25 +51,15 @@
 
 <body>
     <div id="main" style="display: flex; flex-direction: column; margin: 10px;">
-        <div id="welcome">
+        <div id="welcome" style="display: none;">
             <div class="box box-primary">
                 <div class="box-body box-profile">
                     <h3 class="profile-username text-center">Welcome <span id="myProfileName">Please login</span>!</h3>
                     <div style="display: flex;">
-                        <div style="flex: 1; text-align: right; color: #3c8dbc;" class="btnShowProfile"><i
-                                class="fa fa-fw fa-user"></i>Profile</div>
                         <div style="flex: 1; margin-left: 10px; color: #dd4b39;" class="btnLogout"><i
                                 class="fa fa-fw fa-sign-out"></i> Logout
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div id="pleaseLogin">
-            <div class="box box-primary">
-                <div class="box-body box-welcome">
-                    <h3 class="text-center">My Virtual School</h3>
-                    <p class="text-muted text-center"><a href="#" id="btnShowLogin">Click to Log In</a></p>
                 </div>
             </div>
         </div>
@@ -114,12 +104,6 @@
     <script src="js/mobileAjaxCaller.js"></script>
     <script src="js/mobileLogin.js"></script>
     <script src="js/schoolMobile.js"></script>
-
-    <script>
-        $(function () {
-            schoolMobile.handleAccountDisplay();
-        });
-    </script>
 </body>
 
 </html>
