--- a/mobile/schoolAccount.html
+++ b/mobile/schoolAccount.html
@@ -55,9 +55,8 @@
             <div class="box box-primary">
                 <div class="box-body box-profile">
                     <h3 class="profile-username text-center">Welcome <span id="myProfileName">Please login</span>!</h3>
-                    <div style="display: flex;">
-                        <div style="flex: 1; margin-left: 10px; color: #dd4b39;" class="btnLogout"><i
-                                class="fa fa-fw fa-sign-out"></i> Logout
+                    <div class="text-center">
+                        <div style="color: #dd4b39;" class="btnLogout"><i class="fa fa-fw fa-sign-out"></i> Logout
                         </div>
                     </div>
                 </div>
