--- a/mobile/schoolSchedules.html
+++ b/mobile/schoolSchedules.html
@@ -51,7 +51,14 @@
 
 <body>
     <div id="main" style="display: flex; flex-direction: column; margin: 10px;">
-        <div id="my-module">
+        <div id="pleaseLogin" style="display: none;">
+            <div class="box box-primary">
+                <div class="box-body box-profile">
+                    <h3 class="profile-username text-center">Welcome <span>Please login in Account Tab -></span>!</h3>
+                </div>
+            </div>
+        </div>
+        <div id="myModules" style="display: none;">
             <div class="box box-success ">
                 <div class="box-header with-border">
                     <h3 class="box-title">My Modules</h3>
@@ -70,12 +77,6 @@
     <script src="js/mobileAjaxCaller.js"></script>
     <script src="js/mobileLogin.js"></script>
     <script src="js/schoolMobile.js"></script>
-
-    <script>
-        $(function () {
-            schoolMobile.loadDisplay();
-        });
-    </script>
 </body>
 
 </html>
