--- a/mobile/schoolStudents.html
+++ b/mobile/schoolStudents.html
@@ -51,7 +51,14 @@
 
 <body>
     <div id="main" style="display: flex; flex-direction: column; margin: 10px;">
-        <div id="studentsList">
+        <div id="pleaseLogin" style="display: none;">
+            <div class="box box-primary">
+                <div class="box-body box-profile">
+                    <h3 class="profile-username text-center">Welcome <span>Please login in Account Tab -></span>!</h3>
+                </div>
+            </div>
+        </div>
+        <div id="studentsList" style="display: none;">
             <div class="box box-danger">
                 <div class="box-header with-border">
                     <h3 class="box-title">Students</h3>
@@ -62,7 +69,7 @@
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body no-padding">
-                    <ul class="users-list clearfix studentImageRoster">
+                    <ul class="users-list clearfix" id="studentImageRoster">
                     </ul>
                     <!-- /.users-list -->
                 </div>
@@ -76,12 +83,6 @@
     <script src="js/mobileAjaxCaller.js"></script>
     <script src="js/mobileLogin.js"></script>
     <script src="js/schoolMobile.js"></script>
-
-    <script>
-        $(function () {
-            schoolMobile.loadDisplay();
-        });
-    </script>
 </body>
 
 </html>
