--- a/mobile/schoolSchedules.html
+++ b/mobile/schoolSchedules.html
@@ -68,6 +68,38 @@
                     </div>
                 </div>
             </div>
+            <div class="nav-tabs-custom">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#activities" data-toggle="tab" aria-expanded="true">Activities</a></li>
+                    <li class=""><a href="#studentList" data-toggle="tab" aria-expanded="false">Students</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="activities">
+                        <div class="box box-default">
+                            <div class="box-header ui-sortable-handle" style="cursor: move;">
+                                <i class="fa fa-comments-o"></i>
+                                <h3 class="box-title">Activities</h3>
+                            </div>
+                            <div class="box-body box-profile">
+                                <ul class="timeline timeline-inverse" id="ActivityList">
+                                    <b>Please select activity</b>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="studentList">
+                        <div class="box box-danger">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">List of Students</h3>
+                            </div>
+                            <div class="box-body no-padding">
+                                <ul class="users-list clearfix" id="studentImageRoster">
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
