--- a/home.html
+++ b/home.html
@@ -398,7 +398,8 @@
   <script src="js/childTabs.js"></script>
   <script src="js/fieldConstructor.js"></script>
   <script src="js/childFieldConstructor.js"></script>
-  <script src="js/ui-service.js"></script>
+  <script src="js/leftMenu.js"></script>
+  <script src="js/uiService.js"></script>
   <script src="js/register.js"></script>
   <script src="js/mainObj.js"></script>
   <script src="js/form-linker.js"></script>
