--- a/student-home.html
+++ b/student-home.html
@@ -23,11 +23,11 @@
   <script src="js/others/jquery-confirm.min.js"></script>
 
   <script src="js/config.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/login.js"></script>
   <script src="js/alertConfirm.js"></script>
   <script src="js/ajaxCaller.js"></script>
-  <script src="js/utils.js"></script>
   <script src="js/mainObj.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
     integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
@@ -40,6 +40,7 @@
   <script src="js/meetingroom/screenShare.js"></script>
 
   <script src="js/initializer/student-home.js"></script>
+  <script src="js/initializer/faculty-home.js"></script>
 </head>
 
 <body>
